# uad-shizuku

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE-GPL3  PRIVACYPOLICY.md  README.md  ROADMAP.md  SECURITY.md  _config.yml  index.md
.github/workflows/: release.yml  virustotalscan.yml  vite.docs.yml
ai-rules/: README.md  RUST_RS_FILES.md
deploy/fdroid/: README.md  pe.nikescar.uad-shizuku.yml
docs/: development.md  index.md  installation.md  usage.md
docs/kr/: CREDITS.md  README.md  index.md
docs/kr/docs/: development.md  installation.md  usage.md
fastlane/: README.md  fdroid__pe.nikescar.uad_shizuku.yml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
fastlane/metadata/android/en-US/images/: README.md
kr/: README.md  index.md
kr/docs/: index.md
mobile/: Cargo.toml  README.md  asemu.sh  build.fd.sh  build.gh.sh  build.sh  qemu.sh
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/aidl/pe/nikescar/uad_shizuku/: IShellCallback.aidl  IShellService.aidl
mobile/app/src/main/java/pe/nikescar/uad_shizuku/: ScaleGestureHelper.java  ShellService.java  ShizukuBridge.java
mobile/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  uad_shizuku.xml
mobile/app/src/main/res/values/: ic_launcher_background.xml  uad_shizuku_background.xml
mobile/assets/languages/fluent/: en-US.ftl  ko-KR.ftl
mobile/migrations/2026-01-06-093017-0000_initial_schema/: down.sql  up.sql
mobile/migrations/2026-01-07-072047-0000_add_file_path_to_virustotal/: up.sql
mobile/migrations/2026-01-07-100000-0000_create_google_play_apps/: down.sql  up.sql
mobile/migrations/2026-01-10-000000-0000_create_hybridanalysis_results/: down.sql  up.sql
mobile/migrations/2026-01-11-000000-0000_create_package_info_cache/: down.sql  up.sql
mobile/migrations/2026-01-15-000000_create_fdroid_apps/: down.sql  up.sql
mobile/migrations/2026-01-16-000000_create_apkmirror_apps/: down.sql  up.sql
mobile/migrations/2026-01-17-000000_add_version_to_apkmirror_apps/: down.sql  up.sql
mobile/migrations/2026-01-28-000000_add_izzyscore_to_package_info_cache/: down.sql  up.sql
mobile/migrations/2026-02-01-000000_add_error_message_to_hybridanalysis/: down.sql  up.sql
mobile/mobile/migrations/2026-01-07-072047-0000_add_file_path_to_virustotal/: down.sql
mobile/src/: adb.rs  adb_stt.rs  android_activity.rs  android_clipboard.rs  android_inputmethod.rs  android_packagemanager.rs  android_scalegesture.rs  android_screensize.rs  android_shizuku.rs  android_wallpaper.rs  api_apkmirror.rs  api_apkmirror_stt.rs  api_fdroid.rs  api_fdroid_stt.rs  api_googleplay.rs  api_googleplay_stt.rs  api_hybridanalysis.rs  api_hybridanalysis_stt.rs  api_virustotal.rs  api_virustotal_stt.rs  app_operations_queue.rs  app_operations_queue_stt.rs  calc_androidpackage.rs  calc_apkmirror.rs  calc_apkmirror_stt.rs  calc_fdroid.rs  calc_fdroid_stt.rs  calc_googleplay.rs  calc_googleplay_stt.rs  calc_hybridanalysis.rs  calc_hybridanalysis_stt.rs  calc_izzyrisk.rs  calc_stalkerware.rs  calc_stalkerware_stt.rs  calc_virustotal.rs  calc_virustotal_stt.rs  clipboard_popup.rs  db.rs  db_apkmirror.rs  db_fdroid.rs  (+36 more)
mobile/tests/: test_fdroid.rs  test_hybridanalysis.rs  test_virustotal_db.rs.disabled
